--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                     <a onclick="changeWiki('Projetos')">Projetos</a>
                 </ul>
                 <div class="row" id="Sobre" style="display: none;">
-                    <div id="article">
+                    <div id="article" style="max-width: 80%;">
                         <p>Atuo na área de programação há 6 anos, mesmo antes de iniciar o curso de Análise e
                             Desenvolvimento de
                             Sistemas, já despertava em mim um enorme interesse pela área de Desenvolvimento de Sistemas
@@ -218,12 +218,160 @@
                     </aside>
 
                 </div>
-                <div id="Carreira" class="row">
+                <div id="Carreira" class="row"  style="display: none;">
                     <div id="article">
 
                         <div class="card">
-                            <h2>Assistente Administrativo</h2>
-                            <p>Departamento Penitenciário do Paraná (Deppen)</p>
+                            <h3>Assistente Administrativo</h3>
+                            <h5><br>DEPPEN (Departamento Penitenciário do Paraná)</br>25/10/2024-2025 (Atual)</i></h5>
+                            <p>Atualmente, atuo como assistente administrativo no Departamento Penitenciário do Paraná
+                                dentro do
+                                departamento de Tecnologia da Informação, onde tenho a
+                                responsabilidade de administrar o site oficial da instituição, disponível em
+                                www.deppen.pr.gov.br. Além disso,
+                                estou
+                                liderando um projeto de rebranding do site, o que envolve atualizações significativas na
+                                identidade visual e na
+                                experiência do usuário.</br>
+
+                                Outra parte importante do meu trabalho é o suporte técnico. Recebo chamados de policiais
+                                penais de todo o estado
+                                relacionados ao SIGEP, o sistema de gestão de execução penal. Sempre que surgem
+                                problemas nesse sistema, entro
+                                em
+                                contato com os desenvolvedores da CELEPAR para trabalharmos juntos na resolução dos
+                                problemas. Essa colaboração
+                                é crucial para garantir a eficiência do sistema e o atendimento às necessidades dos
+                                usuários.</br>
+
+                                Além do suporte técnico ao SIGEP, também administro outros problemas internos dentro da
+                                DEPPEN, como suporte
+                                técnico
+                                geral na sede. Essa posição me permite aplicar minhas habilidades técnicas em um
+                                contexto mais amplo,
+                                contribuindo para a eficiência dos serviços oferecidos pela instituição.</p>
+
+                        </div>
+
+                        <div class="card">
+                            <h3>Estagiário TI</h3>
+                            <h5><br>CELEPAR (Companhia de Tecnologia da Informação e Comunicação do Paraná)
+                                </br>09/09/2024-17/10/2024 (1 mês)</i></h5>
+                            <p> Durante meu estágio na Celepar, fui alocado na sede do Departamento Penitenciário do
+                                Paraná (DEPPEN), onde tive a
+                                responsabilidade de fornecer suporte técnico para aproximadamente 4.500 computadores
+                                espalhados por todo o sistema penal
+                                do estado. Minhas atividades incluíam suporte remoto e presencial dentro da sede,
+                                garantindo a manutenção eficiente
+                                desses sistemas.</br>
+
+                                Além do suporte regular, tive a oportunidade de realizar trabalhos excepcionais que me
+                                permitiram expandir meu
+                                conhecimento em situações únicas. Essas experiências me deram a chance de aplicar minhas
+                                habilidades técnicas de forma
+                                prática e inovadora, enfrentando desafios que exigiam soluções criativas e
+                                eficazes.</br>
+
+                                Essa experiência foi enriquecedora, pois me permitiu desenvolver minhas habilidades em
+                                administração de redes e
+                                infraestrutura de computadores em um ambiente complexo e dinâmico. Além disso, a
+                                colaboração com a equipe da Celepar foi
+                                fundamental para o sucesso das minhas atividades durante o estágio.</p>
+
+                        </div>
+
+                        <div class="card">
+                            <h3>Estagiário TI</h3>
+                            <h5><br>SECOM (Secretaria da Comunicação do Paraná) </br>15/04/2024-16/08/2024 (4 Meses)</i>
+                            </h5>
+                            <p>
+                                Durante meu estágio na Secretaria da Comunicação do Paraná (SECOM), tive a oportunidade
+                                de aplicar meus
+                                conhecimentos
+                                técnicos em suporte ao usuário e suporte técnico em computadores e sistemas. Minhas
+                                responsabilidades incluíam
+                                atender
+                                às necessidades dos usuários internos, resolver problemas técnicos e colaborar na
+                                administração da
+                                infraestrutura de TI
+                                da instituição.</br>
+
+                                Além disso, mesmo não sendo minha área de estudo principal, tive a oportunidade de
+                                crescer significativamente na
+                                área de
+                                telecomunicação dentro da SECOM. Um dos pontos altos dessa experiência foi participar da
+                                Connect Week 2024, onde
+                                realizei um trabalho independente como técnico de TI. Durante o evento, fui responsável
+                                por administrar as
+                                transmissões
+                                que ocorriam dentro do stand do governo do Paraná. Além disso, tive a oportunidade de
+                                liderar uma pequena
+                                equipe,
+                                composta por outro estagiário, o que me permitiu desenvolver minhas habilidades de
+                                liderança e gestão de
+                                projetos em um
+                                ambiente dinâmico e de alta visibilidade.</br>
+
+                                Essa posição me permitiu expandir meu conhecimento em áreas fora da minha especialização
+                                original, demonstrando
+                                minha
+                                capacidade de adaptação e aprendizado contínuo. Além disso, a colaboração com a equipe
+                                da SECOM foi essencial
+                                para o
+                                sucesso das minhas atividades durante o estágio.</br>
+
+                                Espero que essa descrição ajude a destacar suas responsabilidades e contribuições na
+                                SECOM de forma clara e
+                                eficaz! Se
+                                precisar de mais ajustes ou sugestões, estou à disposição.
+                            </p>
+
+                        </div>
+
+                        <div class="card">
+                            <h3>Assistente Administrativo</h3>
+                            <h5><br>SECOM (Secretaria da Comunicação do Paraná) </br>11/09/2023-12/04/2024 (7 Meses)</i>
+                            </h5>
+                            <p>
+                                Minha primeira experiência em um cargo contratado, tive a oportunidade de contribuir
+                                para o suporte
+                                administrativo da SECOM. Minhas responsabilidades incluíam tarefas administrativas como
+                                gestão da central de
+                                viagens,
+                                acerto de contas e folha de ponto dos servidores públicos.</br>
+
+                                Essa experiência foi fundamental para desenvolver minhas habilidades em gestão
+                                administrativa e trabalho em
+                                equipe, além
+                                de ser um ponto de partida importante na minha carreira profissional.
+                            </p>
+
+                        </div>
+
+                        <div class="card">
+                            <h3>Free Lancer</h3>
+                            <h5><br>Pew's Cavern</br>11/09/2023-12/04/2024 (7 Meses)</i>
+                            </h5>
+                            <p>
+                                Pew's Cavern surgiu como uma forma de monetizar meu hobby durante a pandemia.
+                                Inicialmente, comecei a criar códigos em
+                                JavaScript para o jogo Minecraft, o que me permitiu expandir minhas habilidades para
+                                outras áreas da programação, como
+                                desenvolvimento web, mobile e Unity.</br>
+
+                                Nesse período, Pew's Cavern serviu como uma plataforma para organizar meus trabalhos
+                                como freelancer, incluindo uma loja
+                                virtual onde vendia códigos para Minecraft. Além de aprimorar minhas habilidades
+                                técnicas, tive a oportunidade de
+                                atender clientes de fora do país, o que me ajudou a desenvolver o inglês como uma
+                                segunda língua.</br>
+
+                                Essa experiência foi fundamental para meu crescimento profissional, pois me permitiu
+                                aplicar meus conhecimentos em
+                                projetos reais, gerenciar meus próprios projetos e prazos, e desenvolver habilidades
+                                essenciais para o sucesso como
+                                freelancer, como comunicação eficaz com clientes, levantamento de requisitos e gestão de tempo.
+                            </p>
 
                         </div>
                     </div>
@@ -237,7 +385,7 @@
 
                 </div>
 
-                <div id="Projetos" class="row" style="display: none;">
+                <div id="Projetos" class="row">
                     <div id="article">
                         <p>Projetos</p>
                     </div>
