CEO Pew's Cavern

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <main id="mainPage"style="display: none;">
+    <main id="mainPage" style="display: none;">
         <div class="icon" id="trashIcon" style="top: 10px;   position: absolute;"><img src="./assets/trash.png" alt=""
                 srcset="">
             <p>Lixeira</p>
@@ -108,7 +108,7 @@
             </div>
         </div>
 
-        <div class="window active fullscreen has-scrollbar" id="iexplorer-wiki" style="display: none;"> 
+        <div class="window active fullscreen has-scrollbar" id="iexplorer-wiki" style="display: none;">
             <div class="title-bar">
                 <div class="row">
                     <div class="title-bar-text"><img src="./assets/internetExplorer.png" alt="icon" id="window-icon"
@@ -221,10 +221,37 @@
                 <div id="Carreira" class="row" style="display: none;">
                     <div id="article">
 
+
+                        <div class="card">
+                            <h3>CEO e Dev Lead</h3>
+                            <h5><br>Pew's Cavern</br>02/08/2025 (Atual)</i>
+                            </h5>
+                            <p>
+                                Pew's Cavern nasceu da minha decisão de sair do setor público e apostar em algo maior:
+                                meu próprio negócio.<br>
+                                Depois de trabalhar como assistente técnico no governo, decidi que era hora de colocar
+                                minhas ideias em prática e fundar uma empresa que refletisse minha visão sobre
+                                tecnologia: acessível, eficiente e feita pra resolver problemas de verdade.<br><br>
+
+                                Hoje, atuo como CEO e responsável técnico da Pew's Cavern, liderando uma equipe com mais
+                                dois desenvolvedores.<br>
+                                Juntos, construímos sistemas sob demanda para empresas e projetos próprios que priorizam
+                                automação, acessibilidade e inteligência de negócio.<br><br>
+
+                                Meu papel vai além de programar: defino arquiteturas, escolho stacks, oriento a equipe e
+                                toco os projetos do zero até a entrega.<br>
+                                O objetivo é simples: criar soluções sólidas, escaláveis e que realmente entreguem
+                                valor.<br>
+                            </p>
+
+                        </div>
+
+
                         <div class="card">
                             <h3>Assistente Administrativo</h3>
-                            <h5><br>DEPPEN (Departamento Penitenciário do Paraná)</br>25/10/2024-2025 (Atual)</i></h5>
-                            <p>Atualmente, atuo como assistente administrativo no Departamento Penitenciário do Paraná
+                            <h5><br>DEPPEN (Departamento Penitenciário do Paraná)</br>25/10/2024 - 02/08/2025 (10
+                                meses)</i></h5>
+                            <p>Atuei como assistente administrativo no Departamento Penitenciário do Paraná
                                 dentro do
                                 departamento de Tecnologia da Informação, onde tenho a
                                 responsabilidade de administrar o site oficial da instituição, disponível em
