Revise personal profile section and enhance link styles for improved readability and user experience

--- a/index.html
+++ b/index.html
@@ -176,58 +176,28 @@
                 </ul>
                 <div class="row" id="Sobre">
                     <div id="article" style="max-width: 80%;">
-                        <p>Atuo na área de programação há 6 anos, mesmo antes de iniciar o curso de Análise e
-                            Desenvolvimento de
-                            Sistemas, já despertava em mim um enorme interesse pela área de Desenvolvimento de Sistemas
-                            e todas
-                            suas
-                            multiplicidades. Dentre minhas experiências de linguagens de programação estão: Javascript,
-                            NodeJs,
-                            Flutter, Dart, HTML, CSS, PhP, MySql, C, C++ e React. Procuro sempre me manter atualizado
-                            nas
-                            tendências
-                            do mercado de tecnologia e
-                            desenvolvimento de sistemas, possuo conhecimentos básicos de aporte de ferramentas como
-                            Photoshop,
-                            Blender, DaVinci, Unity e Figma.
-                            Na área pessoal, também me interesso em áreas como física, economia, história e das
-                            narrativas
-                            mitológicas.</p>
-                        <p>Compartilhar conhecimentos é uma das minhas softskills de destaque. Acredito no espírito
-                            colaborativo
-                            de
-                            ponta a ponta dos colaboradores até o cliente. é um diferencial para quem busca proatividade
-                            em um
-                            projeto focado em soluções criativas.</p>
 
-                        <p>Dentre minhas características pessoais, me considero proativo, colaborativo, ágil e possuo
-                            facilidade
-                            em
-                            aprender coisas novas assim como executar trabalhos em equipe. </p>
 
-                        <p>“A tecnologia, assim como toda ferramenta, foi criada com o intuito de facilitar a realização
-                            de
-                            alguma
-                            tarefa. Gosto de levar esse pensamento ao extremo enquanto programo: 'Quais tarefas o
-                            cliente
-                            precisa
-                            realizar?' 'Que tipo de tecnologias podem ser usadas para facilitar essa tarefa?' 'Como
-                            deixar essa
-                            ferramenta com fácil acesso para pessoas que não possuem experiência com tecnologia?'. Esses
-                            são
-                            pontos
-                            que eu mais considero durante a criação de um sistema. Entendo que, como programadores,
-                            podemos
-                            ficar
-                            animados com uma nova tecnologia, mas se não levarmos em conta a percepção do cliente (a
-                            pessoa que
-                            realmente vai usar essa ferramenta), não faremos nada realmente útil para a sociedade, pois
-                            nem
-                            todas as
-                            pessoas nascem com conhecimento geral de tecnologia, e são essas as pessoas em que
-                            precisamos
-                            pensar.”
+
+                        <p>
+                            <strong>Paulo Eduardo Konopka</strong> (Curitiba, 4 de junho de 2004) é um desenvolvedor de
+                            software brasileiro e fundador da <strong>Pew’s Cavern</strong>, onde lidera projetos de
+                            soluções digitais e automações com foco em utilidade e simplicidade.<br>
+                            Trabalhou em órgãos públicos como a <strong>SECOM</strong> e a <strong>CELEPAR</strong> e
+                            atuou na Divisão de TI do <strong>Departamento Penitenciário do Paraná (DEPEN/PR)</strong>,
+                            administrando o site oficial do órgão.<br>
+                            Tem experiência prática com <strong>JavaScript, Node.js, React, Flutter/Dart, PHP, MySQL,
+                                Supabase</strong> e bases de <em>back-end/front-end</em> e integrações com APIs. Também
+                            sabe se virar com automação (ex.: <strong>n8n</strong>) quando faz sentido técnico.<br>
+                            Fora do código, é fã de <strong>Queen</strong>, joga no PC e — segundo ele — “<em>usa Arch,
+                                btw</em>”. Entre amigos e colegas, é conhecido como <em>“O Senhor das ideias bagunçadas
+                                porém surpreendentemente funcionais.”</em><br>
+                            Sua filosofia de trabalho: <em>“Começar pelo problema do usuário e só então escolher a
+                                tecnologia — ferramenta sem propósito não resolve nada.”</em>
                         </p>
+
+
+
 
                     </div>
                     <!-- Profile Infobox -->
@@ -246,11 +216,12 @@
                                 <td class="infobox-label"><strong>Outros nomes</strong></td>
                                 <td class="infobox-value">PewDizinho</td>
                             </tr>
-                             <tr>
+                            <tr>
                                 <td class="infobox-label"><strong>Nascimento</strong></td>
                                 <td class="infobox-value">
                                     4 de junho de 2004
-                                    <span class="idadeTempoReal" style="font-size: inherit; font-weight: inherit;"></span><br>
+                                    <span class="idadeTempoReal"
+                                        style="font-size: inherit; font-weight: inherit;"></span><br>
                                     Curitiba, Paraná, Brasil
                                 </td>
                             </tr>
@@ -473,7 +444,8 @@
                                 <td class="infobox-label"><strong>Nascimento</strong></td>
                                 <td class="infobox-value">
                                     4 de junho de 2004
-                                    <span class="idadeTempoReal" style="font-size: inherit; font-weight: inherit;"></span><br>
+                                    <span class="idadeTempoReal"
+                                        style="font-size: inherit; font-weight: inherit;"></span><br>
                                     Curitiba, Paraná, Brasil
                                 </td>
                             </tr>
@@ -634,7 +606,8 @@
                                 <td class="infobox-label"><strong>Nascimento</strong></td>
                                 <td class="infobox-value">
                                     4 de junho de 2004
-                                    <span class="idadeTempoReal" style="font-size: inherit; font-weight: inherit;"></span><br>
+                                    <span class="idadeTempoReal"
+                                        style="font-size: inherit; font-weight: inherit;"></span><br>
                                     Curitiba, Paraná, Brasil
                                 </td>
                             </tr>
