--- a/index.html
+++ b/index.html
@@ -189,11 +189,11 @@
                             Tem experiência prática com <strong>JavaScript, Node.js, React, Flutter/Dart, PHP, MySQL,
                                 Supabase</strong> e bases de <em>back-end/front-end</em> e integrações com APIs. Também
                             sabe se virar com automação (ex.: <strong>n8n</strong>) quando faz sentido técnico.<br>
-                            Fora do código, é fã de <strong>Queen</strong>, joga no PC e — segundo ele — “<em>usa Arch,
+                            Fora do código, é fã de <strong>Queen</strong>, joga no PC e - segundo ele - “<em>usa Arch,
                                 btw</em>”. Entre amigos e colegas, é conhecido como <em>“O Senhor das ideias bagunçadas
                                 porém surpreendentemente funcionais.”</em><br>
                             Sua filosofia de trabalho: <em>“Começar pelo problema do usuário e só então escolher a
-                                tecnologia — ferramenta sem propósito não resolve nada.”</em>
+                                tecnologia - ferramenta sem propósito não resolve nada.”</em>
                         </p>
 
 
